--- a/style.css
+++ b/style.css
@@ -11,11 +11,18 @@ body {
 }
 
 #title {
-    padding: 20px 0px 10px 15px;
+    padding: 30px 0px 0px 15px;
     text-transform: capitalize;
     font-weight: 1000;
-    font-size: 2.5em;
+    font-size: 3em;
+}
+
+#title-description{
     border-bottom: 1px dotted white;
+    padding-left: 20px;
+    padding-bottom: 15px;
+    font-size: 16px;
+    word-spacing: 1px;
 }
 
 #fcc {
@@ -53,6 +60,7 @@ img:hover {
     line-height: 30px;
     font-size: 22px;
     margin-bottom: 30px;
+    word-wrap: break-word;
 }
 
 p {
@@ -71,6 +79,7 @@ p {
     text-decoration: none;
     padding: 10px 0;
     background: linear-gradient(to bottom, rgba(255,255,255,0.1), rgba(255,255,255,0.2));
+    transition: 4s;
 }
 
 i {
