--- a/style.css
+++ b/style.css
@@ -26,9 +26,10 @@ body {
 }
 
 #fcc {
-    width: 150px;
+    width: 155px;
+    text-align: center;
     border-radius: 10px;
-    padding: 2px 5px 2px 7px;
+    padding: 2px 3px;
     margin: 15px 0 40px 20px;
     background: linear-gradient(to right, rgba(255,255,255,0.15), rgba(255,255,255,0.1));
     font-weight: 100;
