--- a/style.css
+++ b/style.css
@@ -11,17 +11,17 @@ body {
 }
 
 #title {
-    padding: 30px 0px 0px 15px;
+    padding: 30px 0px 0px 20px;
     text-transform: capitalize;
     font-weight: 1000;
-    font-size: 3em;
+    font-size: 2.5em;
 }
 
 #title-description{
     border-bottom: 1px dotted white;
     padding-left: 20px;
     padding-bottom: 15px;
-    font-size: 16px;
+    font-size: 14px;
     word-spacing: 1px;
 }
 
@@ -29,7 +29,7 @@ body {
     width: 155px;
     text-align: center;
     border-radius: 10px;
-    padding: 2px 3px;
+    padding: 2px;
     margin: 15px 0 40px 20px;
     background: linear-gradient(to right, rgba(255,255,255,0.15), rgba(255,255,255,0.1));
     font-weight: 100;
@@ -59,7 +59,7 @@ img:hover {
     padding: 10px;
     text-align: left;
     line-height: 30px;
-    font-size: 22px;
+    font-size: 20px;
     margin-bottom: 30px;
     word-wrap: break-word;
 }
